# bse202

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: fmt.yml
internal_docs/: error_handling.md  template_dirs.md
src/bse202/: __init__.py  __main__.py  app.py  db.py  example_endpoints.py  home.py  hooks.py  middlware.py  sample_data.sql  schema.sql  user_id_matcher.py
src/bse202/lib/: __init__.py
src/bse202/routes/: __init__.py  about.py  blueprint.py  contact.py  index.py
src/bse202/routes/auth/: __init__.py  blueprint.py  login.py  logout.py  signup.py
src/bse202/routes/games/: __init__.py  blueprint.py  cart.py  index.py  library_section.py  snippets.py  storepage.py  storepage_reviews.py
src/bse202/routes/store/: __init__.py  blueprint.py  cart.py  checkout.py  index.py  order_summary.py  payment.py  vault_order_summary.py  vault_payment.py
src/bse202/routes/user/: __init__.py  blueprint.py  by_id.py  index.py  library.py  recommendation.py  search.py  top_up.py  top_up_credit.py  update_top_up_option.py  voucher.py
src/bse202/static/: cart.css  checkout.css  contact.css  landing.css  login.css  order_summary.css  payment.css  store.css  styles.css
src/bse202/static/media/Game/: 1.READ LIST NAME.txt  action1.jfif  action2.jfif  action3.jfif  action4.jfif  action5.jfif  indie1.jfif  indie2.jfif  indie3.jfif  indie4.jfif  indie5.jfif  roleplay1.jfif  roleplay2.jfif  roleplay3.jfif  roleplay4.jfif  roleplay5.jfif  sport1.jfif  sport2.jfif  sport3.jfif  sport4.jfif  sport5.jfif  strategy1.jfif  strategy2.jfif  strategy3.jfif  strategy4.jfif  strategy5.jfif
src/bse202/static/styles/: auth.css  landing.css
src/bse202/static/styles/_example/: games.css  root.css  user.css
src/bse202/templates/: base.html  index.html  login.html  signup.html
src/bse202/templates/_example/: base.html  index.html
src/bse202/templates/_example/auth/: login.html  signup.html
src/bse202/templates/_example/games/: index.html  storepage.html
src/bse202/templates/_example/games/snippets/: cart.html
src/bse202/templates/_example/user/: index.html  library.html  user.html
src/bse202/templates/auth/: advertisement.html  login.html  popupmessages.html  signup.html
src/bse202/templates/elements/: addbanner.html  footer.html  game-launching.html  header.html  owned-game.html  ownedgames.html  popupmessages.html  product-detail.html  profile-banner.html  recommendation.html  search.html  searchbar.html  signup.html  top_up.html
src/bse202/templates/elements-function/: searchbar.py
src/bse202/templates/games/: index.html  storepage.html
src/bse202/templates/user/: index.html
src/bse202/templates/views/: about.html  account.html  cart.html  checkout.html  contact.html  home.html  login.html  order_summary.html  payment.html  signup.html  store.html  top_up_credit.html  vault_order_summary.html  vault_payment.html  voucher.html
