[project]
name = "bse202"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "d3rpp", email = "d3rpp@d3rpp.dev" }]
dependencies = [
    "Flask>=3.0.2",
    "markupsafe>=2.1.5",
    "itsdangerous>=2.2.0",
    "python-dotenv>=1.0.1",
    "ulid>=1.1",
    "argon2-cffi>=23.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.workspace]
members = [
    "src/bse202"
]

[tool.rye.scripts]
dev = { cmd = "flask run", env = { "FLASK_APP" = "bse202:app", "FLASK_DEBUG" = "1", ENV = "DEV" } }
db_init = { call = "bse202:init_db()", env-file = "./.env" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bse202"]

[tool.pyright]
reportUnusedImport = false

[tool.ruff.lint]
ignore = ["F401"] # Ignore the fucky files needed to import and run evrything
